frontend notifs